kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: upscale-banking
spec:
  selector:
    app: upscale-banking
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
