kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upscale-banking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: upscalebanking.codewithxjohn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: upscale-banking
            port:
              number: 3000
  - host: www.upscalebanking.codewithxjohn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: upscale-banking
            port:
              number: 3000
  tls:
  - hosts:
    - upscalebanking.codewithxjohn.com
    - www.upscalebanking.codewithxjohn.com
    secretName: upscale-banking-tls
